--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
+    "graphql": "^15.3.0",
+    "graphql-request": "^3.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
