--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.0.0",
     "firebase": "^7.24.0",
+    "google-maps-react": "^2.0.6",
     "graphql": "^15.3.0",
     "graphql-request": "^3.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^1.9.2"
+    "tailwindcss": "^1.9.2",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "datocms-client": "^3.1.3"
   }
 }
